--- a/FooCoding09-week01/index.html
+++ b/FooCoding09-week01/index.html
@@ -7,6 +7,11 @@
     <title>FooCoding</title>
 </head>
 <body>
-    <header>FooCoding09 Week00</header>
+    <div>
+        <h1>Task 1</h1>
+        <p>What HTML uses for:
+            <a href="https://www.youtube.com/watch?v=u0OeZfIfBRI&t=67s">introduction to HTML</a>
+        </p>
+    </div>
 </body>
 </html>
