--- a/week01/index.html
+++ b/week01/index.html
@@ -16,20 +16,20 @@
                     <li><a href="#">About</a></li>
                     <li><a href="#">Education</a></li>
                     <li><a href="#">Work experience</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="#">Contact Me</a></li>
                 </ul>
             </nav>
         </header>
 <!-- About me section -->
         <section class="about">
-            <div class="about-text">
+            <div aria-label="aboutme-text" class="about-text">
                 <h2>About me</h2>
                 <p>My name is Stella and I come from China. I have been living in 
                     Sweden for 4years. I met an amazing online female tech community,
                     we learn skills and share knowledge and support each other to get involved
                     in tech field. And now I grow my interest and passion in programming!</p>
                 </div>
-            <div class="about-right">
+            <div aria-label="aboutme-image" class="about-right">
                 <div class="empty"></div>
                 <img class="selfie" src="selfie.jpg" alt="Stella">
             </div>
@@ -39,10 +39,10 @@
 <!-- Education section -->
     <section >
         <div class="education">
-             <div ><img class="educationimg" src="https://images.unsplash.com/photo-1481627834876-b7833e8f5570?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8ZWR1Y2F0aW9ufGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="">
+             <div aria-label="education-image" ><img class="educationimg" src="https://images.unsplash.com/photo-1481627834876-b7833e8f5570?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8ZWR1Y2F0aW9ufGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="">
             </div>
         
-             <div class="educationtext">
+             <div aria-label="education-text" class="educationtext">
                 <h2>Education Background</h2>
                 <ul>
                 <li>Swedish course at Malmö universitet</li>
@@ -56,7 +56,7 @@
 <!-- Work experience section -->
         <div class="work">
             <h2>Work experience</h2>
-            <div class="cards">
+            <div aria-label="workexperience" class="cards">
             <div class="card">
                 <img class="card-img" src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?ixid=MnwxMjA3fDF8MHxzZWFyY2h8MjF8fHdvcmt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="">
                 <div class="container">
@@ -91,7 +91,7 @@
             </div>
         </div>  
 <!-- Contact me section -->
-        <div class="contacts">
+        <div aria-label="contact-information" class="contacts">
             <h2>Contact me!</h2>
             <p>Email address: stella@stella.com</p>
             <p>Telephone number: 1234567890</p>
@@ -99,7 +99,7 @@
     </section>
 <!-- Learning stratergy -->
 <div class="learning">
-    <div>
+    <div aria-label="learning-image">
         <img class="learning-img" src="https://images.unsplash.com/photo-1493612276216-ee3925520721?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTM0fHx3b3JrfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" alt="">
     </div>
 
@@ -115,7 +115,7 @@
     </ul>
 </div>
 <!-- HYF -->
-<div class="hyf">
+<div aria-label="hackyourfuture-information" class="hyf">
     <ul>
     <h2>Platforms of HYT related information</h2>
         <li>https://github.com/HackYourFuture</li>
