--- a/week03/index.html
+++ b/week03/index.html
@@ -116,28 +116,28 @@
                     <li><a href="#">
                         <div class="nieuws-item">
                             <h3>Elektrisch rijden voor particulieren in stroomversnelling</h3>
-                            <p>22-09-2021 | 17:45</p>
+                            <p id="date">22-09-2021 | 17:45</p>
                             <p>Er komt meer geld beschikbaar om elektrisch rijden voor particulieren aantrekkelijker te maken. Het kabinet wil zo meer mensen de ...</p>
                         </div>
                     </a></li>
                     <li><a href="#">
                         <div class="nieuws-item">
                             <h3>Benoemingen minister van Buitenlandse Zaken en minister van Defensie</h3>
-                            <p>22-09-2021 | 17:15</p>
+                            <p id="date">22-09-2021 | 17:15</p>
                             <p>Koning Willem-Alexander heeft op 22 september 2021, op voordracht van de minister-president, dr. H.P.M. Knapen tot minister van ...</p>
                         </div>
                     </a></li>
                     <li><a href="#">
                         <div class="nieuws-item">
                             <h3>Prinsjesdag: meer geld voor munitie en veteranenzorg</h3>
-                            <p>21-09-2021 | 15:15</p>
+                            <p id="date">21-09-2021 | 15:15</p>
                             <p>Ondernemen en innovatie, Overheidsfinanciën, Duurzame economie, Zelfstandigen zonder personeel...</p>
                         </div>
                     </a></li>
                     <li><a href="#">
                         <div class="nieuws-item">
                             <h3>Familie, zorg en gezondheid</h3>
-                            <p>21-09-2021 | 16:38</p>
+                            <p id="date">21-09-2021 | 16:38</p>
                             <p>Defensie heeft volgend jaar € 12,5 miljard te besteden. Voor 2022 krijgt Defensie totaal structureel € 95 miljoen erbij, in 2021 ...</p>
                         </div>
                     </a></li>
@@ -179,15 +179,14 @@
             </div>
         </div>
         <footer>
-            <div>
-                <h3>Nederlands</h3>
-                <a href="#">
+            <div class="footer">
                     <div>
                         <ul>
-                            <li><a href="">English</a></li>
-                            <li><a href="">Papiamento</a></li>
-                            <li><a href="">Papiamentu</a></li>
-                            <li><a href="">Nederlandse Gebarentaal</a></li>
+                            <li><h3>Nederlands</h3></li>
+                            <li><a href="#">English</a></li>
+                            <li><a href="#">Papiamento</a></li>
+                            <li><a href="#">Papiamentu</a></li>
+                            <li><a href="#">Nederlandse Gebarentaal</a></li>
                         </ul>
                     </div>
                 </a>
